EXTRA_DIST = \
projects/everything.sln \
projects/mauveAligner.sln \
projects/calculateBackboneCoverage2.vcproj \
projects/calculateBackboneCoverage.vcproj \
projects/checkForLGT.vcproj \
projects/extractBackbone.vcproj \
projects/extractBCITrees.vcproj \
projects/extractSubalignments.vcproj \
projects/mauveAligner.vcproj \
projects/repeatoire.vcproj \
projects/progressiveMauve.vcproj \
projects/rootTrees.vcproj \
projects/scoreAlignment.vcproj \
projects/scoreALU.vcproj \
projects/sortContigs.vcproj \
projects/toEvoHighwayFormat.vcproj \
projects/toGrimmFormat.vcproj \
projects/transposeCoordinates.vcproj \
projects/unalign.vcproj \
projects/uniqueMerCount.vcproj \
projects/uniquifyTrees.vcproj \
projects/mauveAligner.dox

SUBDIRS = src 

